<resources>
    <string-array name="quick_pass_type_entries">
        <item><![CDATA[First %s characters of database password]]></item>
        <item><![CDATA[Last %s characters of database password]]></item>
    </string-array>
    <string-array name="clean_clip_entries">
        <item><![CDATA[30 seconds]]></item>
        <item><![CDATA[1 minute]]></item>
        <item><![CDATA[2 minutes]]></item>
        <item><![CDATA[5 minutes]]></item>
    </string-array>
    <string-array name="quick_lock_entries">
        <item><![CDATA[2 minutes]]></item>
        <item><![CDATA[5 minutes]]></item>
        <item><![CDATA[10 minutes]]></item>
        <item><![CDATA[20 minutes]]></item>
    </string-array>
    <string-array name="v3_add_mor_item">
        <item><![CDATA[Remarks]]></item>
        <item><![CDATA[file attachment]]></item>
        <item><![CDATA[Expiration time]]></item>
    </string-array>
    <string-array name="v4_add_mor_item">
        <item><![CDATA[Remarks]]></item>
        <item><![CDATA[Custom fields]]></item>
        <item><![CDATA[file attachment]]></item>
        <item><![CDATA[TOTP]]></item>
        <item><![CDATA[label]]></item>
        <item><![CDATA[link]]></item>
        <item><![CDATA[Expiration time]]></item>
    </string-array>
    <string-array name="create_normal_group">
        <item><![CDATA[Email]]></item>
        <item><![CDATA[work]]></item>
        <item><![CDATA[Finance]]></item>
        <item><![CDATA[entertainment]]></item>
        <item><![CDATA[recycle bin]]></item>
    </string-array>
    <string-array name="auto_fill_hint_label">
        <item><![CDATA[Email]]></item>
        <item><![CDATA[mobile phone]]></item>
        <item><![CDATA[User]]></item>
        <item><![CDATA[Account number]]></item>
    </string-array>
    <string name="db"><![CDATA[database]]></string>
    <string name="db1"><![CDATA[Database\t|\t<font color="#757575">%s</font>]]></string>
    <string name="password"><![CDATA[Password]]></string>
    <string name="key"><![CDATA[key]]></string>
    <string name="key1"><![CDATA[Key: %s]]></string>
    <string name="open"><![CDATA[Unlock]]></string>
    <string name="hint_set_password"><![CDATA[Set password]]></string>
    <string name="hint_input_password"><![CDATA[Enter a 6-16 character password]]></string>
    <string name="hint_enter_password"><![CDATA[Confirm password]]></string>
    <string name="help_create_db"><![CDATA[v4 KeepPass database created by default]]></string>
    <string name="help_create_group"><![CDATA[Group name cannot exceed 16 characters]]></string>
    <string name="encrypt_type"><![CDATA[Encryption method]]></string>
    <string name="encrypt_type_1"><![CDATA[Password only]]></string>
    <string name="encrypt_type_2"><![CDATA[password + key]]></string>
    <string name="choose_pass_key"><![CDATA[Select key]]></string>
    <string name="hint_set_pass_key"><![CDATA[Please select a key]]></string>
    <string name="pass_key"><![CDATA[file key]]></string>
    <string name="helper_create_pass"><![CDATA[It is recommended to use a mixed password (uppercase and lowercase English + numbers + symbols)]]></string>
    <string name="open_db"><![CDATA[Open database]]></string>
    <string name="db_name"><![CDATA[Enter database name]]></string>
    <string name="create_db"><![CDATA[Create database]]></string>
    <string name="next"><![CDATA[Next step]]></string>
    <string name="up"><![CDATA[Previous step]]></string>
    <string name="hint_select_db_path"><![CDATA[Click to set the data saving method]]></string>
    <string name="hint_select_path_type"><![CDATA[Select database save path]]></string>
    <string name="error_db_name_null"><![CDATA[Please enter database name]]></string>
    <string name="done"><![CDATA[Complete]]></string>
    <string name="enter"><![CDATA[Confirm]]></string>
    <string name="cancel"><![CDATA[Cancel]]></string>
    <string name="hint"><![CDATA[Tips]]></string>
    <string name="help_create_db_path"><![CDATA[It is recommended that you use cloud paths such as Dropbox and WebDAV, which will automatically synchronize your database to the cloud and facilitate the use of the database on other devices.
The \n database is encrypted using AES256. No one can open your database without your password.]]></string>
    <string name="help_pass_type"><![CDATA[Use password only:
\n only requires your password to open the database;
\n password + key:
\n You need to enter a password and select a key file to open the database.]]></string>
    <string name="help_pass_key"><![CDATA[A key file is equivalent to a key to open data and is usually much more complex and reliable than a password. But it\'s also harder to hide it, and if you keep your database in the cloud, never put the key and database together.
\n You can choose any file as the key to open the database, a photo, or a TXT document.
\n⚠️Note: If this photo or this TXT document is modified, then you will not be able to open the database! !
\n strongly recommends using read-only files as keys.]]></string>
    <string name="choose_file"><![CDATA[Select file]]></string>
    <string name="choose_pass_key_file_des"><![CDATA[Choose any file as your key]]></string>
    <string name="create_file"><![CDATA[Create new file]]></string>
    <string name="create_pass_key_file_des"><![CDATA[Create a new file to use as your key]]></string>
    <string name="create_pass_key_success"><![CDATA[Creation of key [%s] successful]]></string>
    <string name="error_pass_null"><![CDATA[Please set database password]]></string>
    <string name="error_enter_pass_null"><![CDATA[Please enter the confirmation password]]></string>
    <string name="error_pass_unfit"><![CDATA[Two passwords are inconsistent]]></string>
    <string name="hint_db_create_success"><![CDATA[Database [%s] created]]></string>
    <string name="history"><![CDATA[history]]></string>
    <string name="history_record"><![CDATA[History]]></string>
    <string name="edit"><![CDATA[Edit]]></string>
    <string name="change_db"><![CDATA[Switch database]]></string>
    <string name="all"><![CDATA[entry]]></string>
    <string name="setting"><![CDATA[settings]]></string>
    <string name="db_setting"><![CDATA[Database settings]]></string>
    <string name="app_setting"><![CDATA[Application settings]]></string>
    <string name="welcome"><![CDATA[Welcome]]></string>
    <string name="help_input_db_pass"><![CDATA[Enter database password]]></string>
    <string name="need_key"><![CDATA[Need a key?]]></string>
    <string name="error_uri"><![CDATA[URI error]]></string>
    <string name="error_input_pass_null"><![CDATA[Please enter database password]]></string>
    <string name="error_open_db"><![CDATA[Unable to open database. Password incorrect, or do I need a key?]]></string>
    <string name="error_open_db_key_empty"><![CDATA[Missing key]]></string>
    <string name="error_open_db_pass_error"><![CDATA[Database password error]]></string>
    <string name="error_open_db_key_invalid"><![CDATA[Invalid key]]></string>
    <string name="error_open_db_version_error"><![CDATA[Database version error]]></string>
    <string name="error_open_db_signature_error"><![CDATA[Database signature error]]></string>
    <string name="error_open_db_algorithm_error"><![CDATA[Invalid algorithm]]></string>
    <string name="error_open_db_arcfour_error"><![CDATA[Invalid stream cipher algorithm]]></string>
    <string name="hint_group_desc"><![CDATA[Group-%s entries]]></string>
    <string name="error_group_id_null"><![CDATA[group ID is empty]]></string>
    <string name="error_entry_id_null"><![CDATA[entry ID is empty]]></string>
    <string name="create_time"><![CDATA[Created by %s]]></string>
    <string name="expire_time"><![CDATA[Expires at %s]]></string>
    <string name="hint_attr"><![CDATA[Advanced properties]]></string>
    <string name="attachment"><![CDATA[file attachment]]></string>
    <string name="hint_ex_property"><![CDATA[Extra properties]]></string>
    <string name="expire"><![CDATA[<font color=#FF0000>%s</font>Expired]]></string>
    <string name="del_group"><![CDATA[Delete group]]></string>
    <string name="edit_group"><![CDATA[Edit group]]></string>
    <string name="success"><![CDATA[success]]></string>
    <string name="fail"><![CDATA[failed]]></string>
    <string name="del_entry"><![CDATA[Delete entry]]></string>
    <string name="del_history"><![CDATA[Delete history]]></string>
    <string name="copy_user_name"><![CDATA[Copy username]]></string>
    <string name="copy_password"><![CDATA[Copy password]]></string>
    <string name="copy_totp"><![CDATA[Copy TOTP token]]></string>
    <string name="hint_del_group"><![CDATA[Are you sure you want to delete the group [<font color=#FF0000>%s</font>]? <br> This operation will move the group to the recycle bin, where you can restore the group.]]></string>
    <string name="hint_del_group_no_recycle"><![CDATA[Do you really want to delete the group [<font color=#FF0000>%s</font>]?]]></string>
    <string name="hint_del_entry"><![CDATA[Do you really want to delete the entry [<font color=#FF0000>%s</font>]? <br> This action will move this entry to the Recycle Bin, where you can later restore the entry.]]></string>
    <string name="hint_del_entry_no_recycle"><![CDATA[Do you really want to permanently delete the entry [<font color=#FF0000>%s</font>]?]]></string>
    <string name="undo_entry"><![CDATA[Restored…]]></string>
    <string name="modify_db_pass"><![CDATA[Change database password]]></string>
    <string name="len"><![CDATA[length]]></string>
    <string name="upper"><![CDATA[capital letters]]></string>
    <string name="lower"><![CDATA[lowercase letters]]></string>
    <string name="numer"><![CDATA[numbers]]></string>
    <string name="minus"><![CDATA[minus sign]]></string>
    <string name="underline"><![CDATA[Underline]]></string>
    <string name="space"><![CDATA[space]]></string>
    <string name="special"><![CDATA[special characters]]></string>
    <string name="bracket"><![CDATA[brackets]]></string>
    <string name="hint_pass_null"><![CDATA[Password is empty]]></string>
    <string name="add_custom_str"><![CDATA[Create custom fields]]></string>
    <string name="hint_input_attr_str_key"><![CDATA[Field name]]></string>
    <string name="hint_input_attr_str_value"><![CDATA[field value]]></string>
    <string name="hint_protect_str"><![CDATA[protected fields]]></string>
    <string name="download_file"><![CDATA[Save attachments to SD card]]></string>
    <string name="open_whit_text"><![CDATA[Open with inner text]]></string>
    <string name="open_whit_img"><![CDATA[Open with internal image viewer]]></string>
    <string name="open_whit_other"><![CDATA[Save to cache and open with system app]]></string>
    <string name="move"><![CDATA[move]]></string>
    <string name="set_key_sum_main_show_entries"><![CDATA[Show all entries after unlocking database]]></string>
    <string name="set_key_sum_main_show_history"><![CDATA[Show history after unlocking database]]></string>
    <string name="set_key_title_main_allow_show_entries"><![CDATA[Home page]]></string>
    <string name="set_key_title_opr_env_check"><![CDATA[Run environment check settings]]></string>
    <string name="set_key_title_opr_env_check_turn_off"><![CDATA[Close]]></string>
    <string name="set_key_title_opr_env_check_turn_on"><![CDATA[open]]></string>
    <string name="set_key_title_show_state_bar"><![CDATA[status bar]]></string>
    <string name="set_key_title_show_state_bar_turn_on"><![CDATA[show]]></string>
    <string name="set_key_title_show_state_bar_turn_off"><![CDATA[hide]]></string>
    <string name="set_key_title_close_load_anim"><![CDATA[loading animation]]></string>
    <string name="set_key_title_close_load_anim_turn_on"><![CDATA[open]]></string>
    <string name="set_key_title_close_load_anim_turn_off"><![CDATA[Close]]></string>
    <string name="collection"><![CDATA[Collection]]></string>
</resources>