<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


  <item
      android:id="@+id/undo"
      android:icon="@drawable/ic_undo_entry"
      android:title="@string/undo_entry"
      app:showAsAction="ifRoom" />

  <item
      android:id="@+id/edit"
      android:icon="@drawable/ic_detail_edit"
      android:title="@string/edit_group"
      app:showAsAction="ifRoom" />

  <item
      android:id="@+id/del"
      android:icon="@drawable/ic_del"
      android:title="@string/del_group"
      app:showAsAction="ifRoom" />

  <item
      android:id="@+id/move"
      android:icon="@drawable/ic_baseline_open_with"
      android:title="@string/move"
      app:showAsAction="ifRoom" />

</menu>