<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

  <item
      android:id="@+id/history"
      android:icon="@drawable/ic_history_record"
      android:title="@string/history"
      android:visible="false"
      app:showAsAction="ifRoom" />

  <item
      android:id="@+id/edit"
      android:icon="@drawable/ic_baseline_edit_24"
      android:title="@string/edit"
      app:showAsAction="ifRoom" />

  <item
      android:id="@+id/collect"
      android:icon="@drawable/ic_star_outline"
      android:title="@string/collection"
      app:showAsAction="ifRoom" />

  <item
      android:id="@+id/del"
      android:icon="@drawable/ic_del"
      android:title="@string/del_entry"
      app:showAsAction="withText" />

</menu>