<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

  <item
      android:id="@+id/download_file"
      android:icon="@drawable/ic_save_24px"
      android:title="@string/download_file"
      app:showAsAction="ifRoom" />

  <item
      android:id="@+id/open_whit_text"
      android:icon="@drawable/ic_text_fields_24px"
      android:title="@string/open_whit_text"
      app:showAsAction="ifRoom" />

  <item
      android:id="@+id/open_whit_img"
      android:icon="@drawable/ic_image_24px"
      android:title="@string/open_whit_img"
      app:showAsAction="ifRoom" />

  <item
      android:id="@+id/open_whit_other"
      android:icon="@drawable/ic_share_24px"
      android:title="@string/open_whit_other"
      app:showAsAction="ifRoom" />
</menu>