<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

  <androidx.coordinatorlayout.widget.CoordinatorLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      >

    <RelativeLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        >

      <TextView
          android:id="@+id/title_temp"
          android:layout_width="match_parent"
          android:layout_height="48dp"
          android:background="@color/white"
          android:gravity="center"
          android:text="@string/choose_pass_key"
          android:textColor="@color/text_black_color"
          style="@style/DialogTitleStyle"
          />

      <androidx.appcompat.widget.AppCompatImageButton
          android:id="@+id/close"
          android:layout_width="48dp"
          android:layout_height="48dp"
          android:layout_alignParentRight="true"
          android:background="@drawable/bg_ripple_primary_selector"
          app:srcCompat="@drawable/ic_close"

          />

      <View
          android:visibility="visible"
          android:id="@+id/line"
          android:layout_width="match_parent"
          android:layout_height="1dp"
          android:layout_below="@+id/title_temp"
          android:background="@color/line_color"
          />

      <com.lyy.keepassa.widget.SimpleItemView
          android:id="@+id/item_1"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_below="@+id/title_temp"
          android:clickable="true"
          app:des="@string/choose_pass_key_file_des"
          app:icon="@drawable/ic_android"
          app:title="@string/choose_file"
          />



      <com.lyy.keepassa.widget.SimpleItemView
          android:id="@+id/item_2"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_below="@+id/item_1"
          android:clickable="true"
          app:des="@string/create_pass_key_file_des"
          app:icon="@drawable/ic_new_file"
          app:title="@string/create_file"
          />

    </RelativeLayout>

  </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>