<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

  <LinearLayout
      style="@style/KpaDialogLayoutStyle"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:minWidth="@dimen/dialog_min_width"
      android:orientation="vertical"
      android:paddingStart="24dp"
      android:paddingEnd="24dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center"
        android:text="@string/modify_db_pass"
        android:textColor="@color/text_blue_color"
        android:textSize="@dimen/text_size_biggest" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@+id/pass_generate"
        app:counterOverflowTextAppearance="@style/InputEditTextErrorStyle"
        app:counterTextAppearance="@style/InputEditTextOverAppearance"
        app:endIconTint="@color/color_icon_grey"
        app:errorEnabled="true"
        app:errorIconDrawable="@drawable/ic_info_filled"
        app:errorTextAppearance="@style/InputEditTextErrorStyle"
        app:helperText="@string/helper_create_pass"
        app:helperTextTextColor="@color/text_gray_color"
        app:passwordToggleEnabled="true"
        app:startIconDrawable="@drawable/ic_password"
        app:startIconTint="@color/color_icon_grey">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/password"
          android:layout_width="match_parent"
          android:layout_height="48dp"
          android:background="@color/transparent"
          android:hint="@string/password"
          android:imeOptions="actionNext"
          android:inputType="textPassword"
          android:singleLine="true"
          android:textColor="@color/text_black_grey_color"
          android:textColorHint="@color/text_hint_color"
          android:textSize="@dimen/text_size_normal">

      </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/enter_password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:helperTextTextColor="@color/text_gray_color"
        app:hintTextAppearance="@style/InputEditTextHintStyle"
        app:startIconDrawable="@drawable/ic_password"
        app:startIconTint="@color/color_icon_grey">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/enter_password"
          android:layout_width="match_parent"
          android:layout_height="48dp"
          android:background="@color/transparent"
          android:hint="@string/hint_enter_password"
          android:imeOptions="actionDone"
          android:inputType="textPassword"
          android:singleLine="true"
          android:textColor="@color/text_black_grey_color"
          android:textColorHint="@color/text_hint_color"
          android:textSize="@dimen/text_size_normal">

      </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:orientation="horizontal">

      <Button
          android:id="@+id/cancel"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:background="@drawable/bg_ripple_white_selector"
          android:text="@string/cancel"
          android:textColor="@color/text_gray_color" />

      <Button
          android:id="@+id/enter"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:background="@drawable/bg_ripple_white_selector"
          android:text="@string/enter"
          android:textColor="@color/text_blue_color" />

    </LinearLayout>

  </LinearLayout>
</layout>